# erd2drawio

./: LICENSE  README.md  pyproject.toml
src/erd2drawio/: __init__.py
src/erd2drawio/cli/: __init__.py
